--- a/landingPagePsicology/package.json
+++ b/landingPagePsicology/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.4.3",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "jspdf": "^3.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.15",
