--- a/landingPagePsicology/package.json
+++ b/landingPagePsicology/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.4.3",
     "axios": "^1.7.9",
+    "firebase": "^12.6.0",
     "formik": "^2.4.6",
     "jspdf": "^3.0.4",
     "react": "^18.3.1",
