--- a/landingPagePsicology/package.json
+++ b/landingPagePsicology/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^3.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.10.1",
     "styled-components": "^6.1.15",
     "yup": "^1.6.1"
   },
